fix UI issues on small screens

--- a/app/webpacker/css/darkswarm/shop_partials/_images.scss
+++ b/app/webpacker/css/darkswarm/shop_partials/_images.scss
@@ -44,6 +44,7 @@
       align-items: center;
       min-height: 360px;
       position: relative;
+      padding: 1px;
     }
 
     .ofn-thumbnail-carousel__image {
